<resources>
    <string name="app_name">FAMEST</string>
    <string name="paired_list">Paired_list</string>
    <string name="ON">ON</string>
    <string name="on">ON</string>
    <string name="button">Button</string>
    <string name="PairedDevices">Paired Devices</string>
    <string name="textview">TextView</string>
    <string name="Start">Começar sessão</string>
    <string name="Esquerdo">Esquerdo</string>
    <string name="Direito">Direito</string>
    <string name="data_to_collect_esq">Data to collect esq</string>
    <string name="data_to_collect_dir">Data to collect dir</string>
    <string name="start_the_read">Start the read</string>
    <string name="file">file</string>
    <string name="menu_de_conex_o">Menu de conexão</string>
    <string name="gr_ficos">Gráficos</string>
    <string name="nome_do_utilizador">Nome do utilizador</string>
    <string name="informa_es_t_cnicas">Informações técnicaS</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="todo">TODO</string>
    <string name="dados"><u>Dados</u></string>
</resources>
